# geospatial

./: .whitesource
granite-geospatial-ocean/: README.md  granite-geospatial-ocean-model-card.md  pyproject.toml
granite-geospatial-ocean/configs/: config-fine-tuning.yaml
granite-geospatial-ocean/custom_modules/: __init__.py  prithvi_vit_S3.py
granite-geospatial-ocean/granite_geo_ocean_colour/: helper.py
granite-geospatial-ocean/notebooks/: fine_tuning.ipynb
uki-flooddetection/: granite-geospatial-flood-detection-uki-model-card.md
uki-flooddetection/notebooks/: 1_getting_started.ipynb  2_fine_tuning.ipynb
uki-flooddetection/notebooks/custom_modules/: granite_geospatial_uki.py
